--- a/blog-api/src/main/resources/application.properties
+++ b/blog-api/src/main/resources/application.properties
@@ -19,7 +19,9 @@ spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
 spring.datasource.url=jdbc:mysql://localhost:3306/data?allowMultiQueries=true&useUnicode=true&characterEncoding=UTF-8
 spring.datasource.username=root
 spring.datasource.password=910820818xb520
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+#spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
 #spring.datasource.initialize=true
 #spring.datasource.platform=mysql
