--- a/blog-app/package.json
+++ b/blog-app/package.json
@@ -14,6 +14,8 @@
     "element-ui": "^2.0.10",
     "lodash": "^4.17.4",
     "mavon-editor": "^2.4.16",
+    "node-sass": "^4.7.2",
+    "sass-loader": "^6.0.6",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1"
